Fix alignment of version number

--- a/app/inst/www/styles/default.css
+++ b/app/inst/www/styles/default.css
@@ -2276,7 +2276,7 @@ table.dataTable td {
   position: relative; }
   #rcap-navbar-header span {
     position: absolute;
-    right: 20px;
+    right: 19px;
     top: 10px;
     color: #FFA500; }
 
